fixed gap in profile bar

--- a/react-app/src/components/profilebar/ProfileBar.css
+++ b/react-app/src/components/profilebar/ProfileBar.css
@@ -4,7 +4,7 @@
     align-self: flex-end;
     background-color: #292b2f;
     height: 53px;
-    width: 239px;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
   
